# htmx-counter

./: .gitignore  Cargo.toml  flake.nix
assets/: style.css
migrations/: 20240120113504_settings.down.sql  20240120113504_settings.up.sql  20240120113846_default-count.down.sql  20240120113846_default-count.up.sql
src/: main.rs
src/counter/: mod.rs  tmpl.rs
templates/: count.html  index.html
