[package]
name = "htmx-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-routing"] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"]}
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"


[profile.dev.package."*"]
opt-level = 3
